# Project-EAS-Kelompok-PML-5

./: 01-Preprocessing.ipynb  LICENSE  Makefile  README.md  app.py  carprice_xgb.pkl  pyproject.toml  requirements.txt
app/: app.py
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: 01-Preprocessing.ipynb
notebooks/outputs/: actual_vs_predicted.csv  eda_summary.json  feature_importance.csv  model_comparison.csv  model_info.json
old/: .gitignore
old/outputs/: harga_per_merek.csv  kategori_dropdown.json  model_info.json
outputs/: feature_importance.csv  harga_per_kondisi.csv  model_comparison.csv
project_eas_kelompok_pml_5/: __init__.py  dataset.py  features.py  plots.py
project_eas_kelompok_pml_5/modeling/: predict.py  train.py
reports/metrics/: actual_vs_predicted.csv
src/models/: feature_columns.json
