[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "project_eas_kelompok_pml_5"
version = "0.0.1"
description = "Project EAS PML Kelompok 5"
authors = [
  { name = "Kelompok 5" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["project_eas_kelompok_pml_5"]
include = ["pyproject.toml", "project_eas_kelompok_pml_5/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["project_eas_kelompok_pml_5"]
force-sort-within-sections = true

